# boatconnect

./: LICENSE  PROTOCOL.md  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
examples/: encode-sample.ts  serial-listen.ts  tcp-server.ts  udp-listen.ts  udp-send.ts  ws-bun-server.ts
firmware/: README.md  boatconnect_crc32.c  boatconnect_frame_v1.h
firmware/components/boatconnect_frame/: CMakeLists.txt
firmware/esp_ble_mesh_gateway/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/esp_ble_mesh_gateway/main/: CMakeLists.txt  boatconnect_gateway_main.c
firmware/esp_ble_mesh_node/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/esp_ble_mesh_node/main/: CMakeLists.txt  boatconnect_node_main.c
scripts/: commit-and-push.ps1  publish-github.mjs  publish-tree.mjs  toB64.mjs  upload-via-gh-api.ps1
src/: index.ts
src/codec/: constants.ts  crc32.ts  errors.ts  frame.ts  payload.ts  stream-parser.ts
src/metrics/: dps.ts  index.ts  stroke-rate.ts  telemetry-scale.ts
src/session/: fleet-hub.ts
src/transports/: serial.ts  tcp-client.ts  tcp-server.ts  udp-listener.ts  udp-sender.ts
src/types/: frame.ts  message-type.ts  telemetry.ts
test/: fleet-hub.test.ts  frame.test.ts  metrics.test.ts  serial-transport.test.ts
